--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,9 @@ dependencies {
 
     //splash
     implementation 'androidx.core:core-splashscreen:1.0.0'
+
+    // ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
 }
 
 kapt {
