--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,11 @@ dependencies {
     //splash
     implementation 'androidx.core:core-splashscreen:1.0.0'
 
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.14.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.1'
+
     // ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
 
